taking input and console

--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banana</title>
 
+    <style>
+      textarea {
+        width: 80%;
+        margin: 1rem;
+        height: 10vh;
+        display: block;
+        padding: 1rem;
+      }
+    </style>
+  </head>
 
-</head>
-<body>
-    <h1>Bananaaa</h1>
+  <body>
+    <h1>Talk Bananaaa</h1>
+    <textarea
+      id="txt-input"
+      placeholder="Enter your sentence in English"
+    ></textarea>
+    <button id="btn-translate">Translate</button>
     <script src="app.js" type="text/javascript"></script>
-
-</body>
+  </body>
 </html>
