--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         display: block;
         padding: 1rem;
       }
+      #output {
+        border: 2px solid black;
+        width: 80%;
+        margin: 1rem;
+        height: 10vh;
+        display: block;
+        padding: 1rem;
+      }
     </style>
   </head>
 
@@ -24,6 +32,12 @@
       placeholder="Enter your sentence in English"
     ></textarea>
     <button id="btn-translate">Translate</button>
+
+    <div style="font-size: larger; font-weight: bold">
+      Your Translated Sentence is here
+    </div>
+    <div id="output"></div>
+
     <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
