--- a/index.html
+++ b/index.html
@@ -1,48 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Banana</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Banana</title>
+    <style>
+      textarea {
+        width: 80%;
+        margin: 1rem;
+        height: 10vh;
+        display: block;
+        padding: 1rem;
+      }
 
-  <style>
-    textarea {
-      width: 80%;
-      margin: 1rem;
-      height: 10vh;
-      display: block;
-      padding: 1rem;
-    }
+      #output {
+        border: 2px solid black;
+        width: 80%;
+        margin: 1rem;
+        height: 10vh;
+        display: block;
+        padding: 1rem;
+      }
 
-    #output {
-      border: 2px solid black;
-      width: 80%;
-      margin: 1rem;
-      height: 10vh;
-      display: block;
-      padding: 1rem;
-    }
+      #btn-translate {
+        margin: 1rem;
+      }
+    </style>
+  </head>
 
-    #btn-translate {
-      margin: 1rem;
-    }
-  </style>
-</head>
-
-<body>
-  <h1>Talk Bananaaa</h1>
-  <textarea id="txt-input" placeholder="Enter your sentence in English">
+  <body>
+    <h1>Talk Bananaaa</h1>
+    <textarea id="txt-input" placeholder="Enter your sentence in English here">
     </textarea>
-  <button id="btn-translate">Translate</button>
+    <button id="btn-translate">Translate</button>
 
-  <div style="font-size: larger; font-weight: bold">
-    Your Translated Sentence is here 👇🏻
-  </div>
-  <div id="output"></div>
+    <div style="font-size: larger; font-weight: bold">
+      Your Translated Sentence is here 👇🏻
+    </div>
+    <div id="output"></div>
 
-  <script src="app.js" type="text/javascript"></script>
-</body>
-
+    <script src="app.js" type="text/javascript"></script>
+  </body>
 </html>
