--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h1>Talk Bananaaa</h1>
     <textarea id="txt-input" placeholder="Enter your sentence in English here">
     </textarea>
-    <button id="btn-translate">Translate</button>
+    <button id="btn-translate" onclick="clickHandler()">Translate</button>
 
     <div style="font-size: larger; font-weight: bold">
       Your Translated Sentence is here 👇🏻
