--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     </style>
   </head>
 
-  <body>
+  <body id="body">
     <h1 class="name">Talk Bananaaa</h1>
     <textarea id="txt-input" placeholder="Enter your sentence in English here">
     </textarea>
     <button id="btn-translate" onclick="clickHandler()">Translate</button>
 
-    <div class="text2" style="font-size: larger; font-weight: bold">
+    <div class="text2" style="font-size: larger; font-weight: bold; color: black;">
       Your Translated Sentence is here 👇🏻
     </div>
     <div id="output"></div>
